# Lists

./: .coverage  .gitignore  .hermes-triage-state.json  .pre-commit-config.yaml  .triage-batch-20260624.json  .triage-batch-20260625.json  .triage-batch-20260626-8.json  .triage-batch-20260626a.json  .triage-batch-20260626b.json  .triage-batch-20260626c.json  .triage-batch-20260626d.json  .triage-batch-20260626e.json  .triage-batch-20260626g.json  .triage-batch-20260627.json  .triage-batch-apply-20260625.json  .triage-batch-apply-20260626g.json  .triage-log.md  AUTOMATION_SUMMARY.md  Adobe Major Updated Blocklist.txt  AdobeBlockList  Ads  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CR-0001.txt  DoH.txt  HERMES_REMOVAL_SUMMARY.md  IMPROVEMENT_PLAN.md  README.md  STATS.md  UPSTREAM_IMPLEMENTATION_SUMMARY.md  UPSTREAM_MONITORING.md  WEEK_1_2_COMPLETION_SUMMARY.md  abuse.ip  abuse.txt  adobe.txt  adobe2.txt  ads.txt  aicharacter.txt  apply_batch.py  (+82 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.hermes/: triage-config.json  triage_report_2026-06-24.json  triage_report_2026-06-25.json
.triage-lock/: pid  started_at
adguard/: abuse-ags.txt  adobe-ags.txt  ads-ags.txt  basic-ags.txt  crypto-ags.txt  drugs-ags.txt  facebook-ags.txt  fortnite-ags.txt  gambling-ags.txt  malware-ags.txt  piracy-ags.txt  porn-ags.txt  ransomware-ags.txt  redirect-ags.txt  scam-ags.txt  smart-tv-ags.txt  tiktok-ags.txt  torrent-ags.txt  tracking-ags.txt  twitter-ags.txt  vaping-ags.txt  whatsapp-ags.txt  youtube-ags.txt
alpha/: porn-alpha.txt
alt-version/: abuse-nl.txt  adobe-nl.txt  ads-nl.txt  ads-nl.txt.bak  ads_lite-nl.txt  basic-nl.txt  basic_lite-nl.txt  crypto-nl.txt  crypto.txt  crypto_lite-nl.txt  drugs-nl.txt  drugs.txt  drugs_lite-nl.txt  facebook-nl.txt  facebook.txt  facebook_lite-nl.txt  fortnite-nl.txt  gambling-nl.txt  gambling.txt  gambling_lite-nl.txt  malware-nl.txt  phishing-nl.txt  phishing_lite-nl.txt  piracy-nl.txt  piracy.txt  piracy_lite-nl.txt  porn-nl.txt  ransomware-nl.txt  ransomware.txt  ransomware_lite-nl.txt  redirect-nl.txt  redirect_lite-nl.txt  scam-nl.txt  scam_lite-nl.txt  smart-tv-nl.txt  smart-tv_lite-nl.txt  tiktok-nl.txt  tiktok.txt  tiktok_lite-nl.txt  torrent-nl.txt  (+11 more)
blocklist_project.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
config/: lists.yml  lists.yml.backup  upstream-sources-example.yml
dnsmasq-version/: abuse-dnsmasq.txt  adobe-dnsmasq.txt  basic-dnsmasq.txt  basic_lite-dnsmasq.txt  crypto-dnsmasq.txt  crypto_lite-dnsmasq.txt  drugs-dnsmasq.txt  drugs_lite-dnsmasq.txt  facebook-dnsmasq.txt  facebook_lite-dnsmasq.txt  fortnite-dnsmasq.txt  gambling-dnsmasq.txt  gambling_lite-dnsmasq.txt  malware-dnsmasq.txt  piracy-dnsmasq.txt  piracy_lite-dnsmasq.txt  porn-dnsmasq.txt  ransomware-dnsmasq.txt  ransomware_lite-dnsmasq.txt  redirect-dnsmasq.txt  redirect_lite-dnsmasq.txt  scam-dnsmasq.txt  scam_lite-dnsmasq.txt  smart-tv-dnsmasq.txt  smart-tv_lite-dnsmasq.txt  tiktok-dnsmasq.txt  tiktok_lite-dnsmasq.txt  torrent-dnsmasq.txt  torrent_lite-dnsmasq.txt  tracking-dnsmasq.txt  tracking_lite-dnsmasq.txt  (+6 more)
(+88 files in other folders)
